--- a/AppSGMonitoreoEstudiantil/app/src/main/AndroidManifest.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="pe.edu.sise.appsgmonitoreoestudiantil">
+    package="pe.edu.sise.appsgmonitoreoestudiantil">
 
     <application
         android:allowBackup="true"
@@ -8,23 +8,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"/>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".DetalleAlumnoActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
-        <activity android:name=".NotificandoActivity">
-        </activity>
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".NotificandoActivity"></activity>
+        <activity android:name=".DetalleActividad"></activity>
     </application>
 
 </manifest>
