--- a/AppSGMonitoreoEstudiantil/app/build.gradle
+++ b/AppSGMonitoreoEstudiantil/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     testCompile 'junit:junit:4.12'
 }
