--- a/AppSGMonitoreoEstudiantil/app/src/main/AndroidManifest.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/AndroidManifest.xml
@@ -26,6 +26,17 @@
             android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".NotificandoActivity"></activity>
         <activity android:name=".DetalleActividad"></activity>
+
+        <service android:name=".SmeFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".SmeFirebaseInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
